# seclea_ai

./: .editorconfig  .env.examples  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile.dev  LICENSE  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  Seclea_Tutorial_Session.ipynb  TODO  __version__.py  increment-version.sh  pyproject.toml  random_forest.py  requirements.conda  requirements.txt  requirements_conda.txt  requirements_pip.txt  seclea_db  setup.cfg  setup.py  upload_pkg.sh
.do/: app.yml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  integration_test.yml  python.yml  unit_test.yml
.seclea/: tmp
bfd2617a-0fc9-4fa8-b823-ae935c03465d/: .metadata.json
data/docs/AI/: introduction.txt
data/docs/API/: Introduction.txt
data/docs/DB/: Business_Intelligence.txt  Dataset_Transformation.txt  FAQ.txt  Introduction.txt  Management_System.txt  Scalability.txt  Structured_Query_Language.txt  nosql.Introduction.txt
data/docs/DB/Model/: introduction.txt
data/docs/Seclea/: about.txt
data/docs/VCS/: introduction.txt
docs/: Intro_to_Seclea.ipynb
docs/design/: architecture.md
docs/examples/: Getting_Started_with_Seclea.ipynb
docs/source/: Getting_Started_with_Seclea.md  conf.py  index.rst  readme.rst  seclea_ai.rst  tutorial.rst
docs/static/js/: favicon.js
scripts/: integration_test.sh  make_doc_site.sh  run_make_doc.sh  setup-env.sh  update-version.sh
seclea_ai/: __init__.py  authentication.py  exceptions.py  model_management.py  playground.py  requirements.txt  seclea_ai.py  storage.py  t.py  to-uninstall.txt  transformations.py  upload.py
seclea_ai/auth/: get_token.py
seclea_ai/cbe_sklearn/src/: decision_tree.py  sample_test_file.py
seclea_ai/cbe_sklearn/test/: test_decision_tree.py
seclea_ai/internal/: api.py  authentication.py  backend.py  config.py  dataset_utils.py  depreciated.py  director.py  exceptions.py  file_processor.py  local_db.py  mixins.py  processors.py  queue.py  schemas.py  threading.py  typing.py
seclea_ai/internal/api/: api_interface.py  api_utils.py  base.py  collection.py  exceptions.py  status.py
seclea_ai/internal/models/: __init__.py  db.py  entities.py  fields.py  init_tables.py  record.py
seclea_ai/internal/persistence/: auth_credentials.py  init_tables.py  models.py  record.py
seclea_ai/internal/processors/: __init__.py  processor.py  sender.py  writer.py
seclea_ai/seclea_utils/: .flake8  .gitignore  README.md  requirements.txt  setup.py
seclea_ai/seclea_utils/.github/: PULL_REQUEST_TEMPLATE.md
seclea_ai/seclea_utils/scripts/: increment-version.sh
seclea_ai/seclea_utils/seclea_utils/: __init__.py  get_model_manager.py  lightgbm.py  sklearn.py  xgboost.py
seclea_ai/seclea_utils/test/: test_compression.py  test_get_model_manager.py  test_model_management.py  test_transformations.py  test_transmission.py  test_typing.py
seclea_ai/svc/api/: errors.py
src/: __doc__.py  __init__.py  __main__.py  __version__.py
src/core/: exceptions.py  integrations.py  routes.py  seclea_ai.py  serialization.py  settings.py  storage.py
src/core/__settings__/: base.py
src/ctrl/: authentication.py  helper.py  transformations.py
test/: metadata_for_tests.py  notebookc739ec55d6.ipynb  rnd.py  tensorflow_workflow.py  test_authentication.py  test_config.py  test_dataset_utils.py  test_playground.py  test_seclea_ai.py  test_seclea_ai_helper_functions.py  test_seclea_ai_threading.py  test_upload.py
test/internal/: test_config.py  test_seclea_ai_threading.py
test/internal/models/: test_fields.py
test/sample_project/: tensorflow_workflow.py
test/test_integration_portal/: Insurance_fraud_dataset.ipynb  energydata_complete.csv  supersample.py  test_binary_integration.py  test_census_integration.py  test_fraud_detection_integration.py  test_lgbm_integration.py  test_multiclass_integration.py  test_multilabel_integration.py  test_new_workflow.py  test_regression_integration.py  test_seclea_ai.py  test_sklearn_integration.py  test_tensorflow_integration.py  test_time_series_classification_integration.py  test_time_series_regression_integration.py  test_xgboost_integration.py
testing/: test_upload.py
(+28 files in other folders)
