[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "seclea-ai"
version = "0.1.0"
description = ""
authors = ["occy88 <octavio.delser@gmail.com>"]
readme = "README.md"
packages = [{ include = "seclea_ai" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
boto3 = "^1.26.16"
certifi = "^2022.9.24"
chardet = "^5.0.0"
decorator = "^5.1.1"
dill = "^0.3.6"
idna = "^3.4"
imbalanced-learn = "^0.9.1"
jupyter = "^1.0.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
pickledb = "^0.9.2"
pillow = "^9.3.0"
pre-commit = "^2.20.0"
requests = "^2.28.1"
responses = "^0.22.0"
scikit-learn = "^1.1.3"
setuptools = "^65.6.3"
tensorflow = "2.10.0"
lightgbm = "3.3.2"
urllib3 = "^1.26.13"
wrapt = "^1.14.1"
xgboost = "^1.7.1"
pytest = "^7.2.0"
torch = "1.13.0"
torchray = "1.0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
