[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "seclea-ai"
version = "1.0.5"
description = ""
authors = ["Seclea-Maintainers <support@seclea.com>"]
readme = "README.md"
packages = [{ include = "seclea_ai" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
boto3 = "^1.26.16"
certifi = "^2022.9.24"
chardet = "^5.0.0"
circuitbreaker = "^1.4.0"
decorator = "^5.1.1"
dill = "^0.3.6"
idna = "^3.4"
joblib = "^1.2.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
peewee = "^3.14.10"
pillow = "^9.3.0"
pympler = ">=1.0.1"
pyyaml = ">=6.0"
requests = "^2.28.1"
scikit-learn = "^1.1.3"
urllib3 = "^1.26.13"
wrapt = "^1.14.1"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
imbalanced-learn = "^0.9.1"
jupyter = "^1.0.0"
lightgbm = "3.3.2"
pre-commit = "^2.20.0"
xgboost = "^1.7.1"
tensorflow = { version = "2.10.0", markers = "platform_machine=='x86_64' or sys_platform=='win32'" }
tensorflow-macos = { version = "^2.10.0", markers = "platform_machine!='x86_64' and sys_platform=='darwin'" }
torch = [
    { version = "^1.13.0", markers = "sys_platform =='linux'" },
    { version = "1.12.1", markers = "sys_platform !='linux'" }]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
responses = "^0.22.0"

[tool.poetry.group.build.dependencies]
setuptools = "^65.6.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
myst_parser = "^0.17.0"
nbsphinx = "^0.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
